--- a/style/main.css
+++ b/style/main.css
@@ -629,6 +629,10 @@ html,
   margin-top: 2rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1025,6 +1029,11 @@ html,
   color: rgb(33 37 41 / var(--tw-text-opacity));
 }
 
+.text-gray-6 {
+  --tw-text-opacity: 1;
+  color: rgb(108 117 125 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1176,7 +1185,7 @@ html,
 .features {
   display: grid;
   @media (min-width: 1024px) {
-    min-height: 80svh;
+    min-height: 90svh;
 
     gap: 1rem;
 
@@ -1304,6 +1313,14 @@ html,
 
   .md\:mt-40 {
     margin-top: 10rem;
+  }
+
+  .md\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .md\:mt-8 {
+    margin-top: 2rem;
   }
 
   .md\:h-72 {
