--- a/input.css
+++ b/input.css
@@ -199,13 +199,24 @@ html.lenis {
   }
 }
 
-.features a {
+/* .features a {
   transform: translate(0px, 20%);
   will-change: auto;
   animation-name: slideDown;
   animation-duration: 1.2s;
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
+} */
+
+.features a {
+  will-change: transform;
+  transform: translateZ(0);
+  transition: transform 0.3s;
+}
+
+.features a:hover {
+  transform: scaleX(1.008);
+  transition: transform 0.6s cubic-bezier(0.34, 5.56, 0.64, 1);
 }
 
 .features a:nth-of-type(1) {
@@ -230,4 +241,90 @@ html.lenis {
 
 .features a:nth-of-type(6) {
   animation-delay: 0.3s;
+}
+
+/* ANIMATED BUTTON */
+
+.button {
+  @apply relative;
+  @apply overflow-hidden;
+  @apply lg:row-span-1 lg:col-span-2 order-3 w-full rounded-full self-start outline-none font-normal text-lg md:text-3xl px-4 py-8 md:py-12 lg:py-16 bg-gray-1 shadow-sm ring-1 ring-inset ring-gray-9;
+
+  transform: translateZ(0);
+  transition: transform 0.3s;
+}
+
+.button:hover {
+  transform: scaleX(1.02);
+  transition: transform 0.6s cubic-bezier(0.34, 5.56, 0.64, 1);
+}
+
+.button-cta-border {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 1px;
+  z-index: 3;
+  border: 1px solid;
+  border-radius: 1000px;
+}
+
+.button-cta-ripple {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  overflow: hidden;
+  transform: translateZ(0);
+  border-radius: inherit;
+}
+
+.button-cta-ripple span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: translateY(101%);
+  @apply bg-gray-9;
+  border-radius: 50% 50% 0 0;
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0, 1),
+    border-radius 0.5s cubic-bezier(0.4, 0, 0, 1);
+}
+
+.button-cta:hover .button-cta-ripple span {
+  border-radius: 0;
+  transform: translateY(0);
+  transition-duration: 0.5s, 0.9s;
+}
+
+.button-cta-title {
+  position: relative;
+  display: block;
+  padding: 0 0.16em 0 0;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.button-cta-title span {
+  display: block;
+  transition: transform 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.button-cta:hover .button-cta-title span {
+  transform: translateY(-110%);
+}
+
+.button-cta-title span:after {
+  content: attr(data-text);
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 110%;
+  left: 0;
+  @apply text-gray-1;
 }
